# work-helper-transcriber

./: .gitignore  main.py  pyproject.toml  script.sh
openai/: whisper_large_3_turbo.py
