[project]
name = "work-helper-transcriber"
version = "0.1.0"
description = ""
authors = [
    {name = "teq-quocbang",email = "bangthong@teqnological.asia"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.50.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
